.metadata/.plugins/org.eclipse.cdt.ui/TEST.build.log
01:39:31 **** Rebuild of configuration Debug for project TEST ****
Info: Internal Builder is used for build
g++ "-IC:\\SFML-2.5.1-windows-gcc-7.3.0-mingw-64-bit\\SFML-2.5.1\\include" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TEST.o" "..\\src\\TEST.cpp" 
..\src\TEST.cpp: In function 'int main()':
..\src\TEST.cpp:3:5: error: 'i' was not declared in this scope
 if (i == tamNavio) {
     ^
..\src\TEST.cpp:3:10: error: 'tamNavio' was not declared in this scope
 if (i == tamNavio) {
          ^~~~~~~~
..\src\TEST.cpp:7:30: error: 'posy' was not declared in this scope
                     for (i = posy - 1; i <= posy + tamNavio; i++) {
                              ^~~~
..\src\TEST.cpp:9:29: error: 'posx' was not declared in this scope
                         if (posx - 1 >= 0 && matriz[posx - 1][i] != AGUA) { //limite da matriz
                             ^~~~
..\src\TEST.cpp:9:46: error: 'matriz' was not declared in this scope
                         if (posx - 1 >= 0 && matriz[posx - 1][i] != AGUA) { //limite da matriz
                                              ^~~~~~
..\src\TEST.cpp:9:46: note: suggested alternative: 'main'
                         if (posx - 1 >= 0 && matriz[posx - 1][i] != AGUA) { //limite da matriz
                                              ^~~~~~
                                              main
..\src\TEST.cpp:9:69: error: 'AGUA' was not declared in this scope
                         if (posx - 1 >= 0 && matriz[posx - 1][i] != AGUA) { //limite da matriz
                                                                     ^~~~
..\src\TEST.cpp:14:29: error: 'posx' was not declared in this scope
                         if (posx + 1 < ROWS && matriz[posx + 1][i] != AGUA) {
                             ^~~~
..\src\TEST.cpp:14:40: error: 'ROWS' was not declared in this scope
                         if (posx + 1 < ROWS && matriz[posx + 1][i] != AGUA) {
                                        ^~~~
..\src\TEST.cpp:14:48: error: 'matriz' was not declared in this scope
                         if (posx + 1 < ROWS && matriz[posx + 1][i] != AGUA) {
                                                ^~~~~~
..\src\TEST.cpp:14:48: note: suggested alternative: 'main'
                         if (posx + 1 < ROWS && matriz[posx + 1][i] != AGUA) {
                                                ^~~~~~
                                                main
..\src\TEST.cpp:14:71: error: 'AGUA' was not declared in this scope
                         if (posx + 1 < ROWS && matriz[posx + 1][i] != AGUA) {
                                                                       ^~~~
..\src\TEST.cpp:22:29: error: 'matriz' was not declared in this scope
                             matriz[posx][posy+i] = BARCO;
                             ^~~~~~
..\src\TEST.cpp:22:29: note: suggested alternative: 'main'
                             matriz[posx][posy+i] = BARCO;
                             ^~~~~~
                             main
..\src\TEST.cpp:22:36: error: 'posx' was not declared in this scope
                             matriz[posx][posy+i] = BARCO;
                                    ^~~~
..\src\TEST.cpp:22:42: error: 'posy' was not declared in this scope
                             matriz[posx][posy+i] = BARCO;
                                          ^~~~
..\src\TEST.cpp:22:52: error: 'BARCO' was not declared in this scope
                             matriz[posx][posy+i] = BARCO;
                                                    ^~~~~
..\src\TEST.cpp:24:25: error: 'valido' was not declared in this scope
                         valido = true;
                         ^~~~~~
..\src\TEST.cpp:24:25: note: suggested alternative: 'void'
                         valido = true;
                         ^~~~~~
                         void
..\src\TEST.cpp: At global scope:
..\src\TEST.cpp:28:1: error: expected declaration before '}' token
 }
 ^

01:39:31 Build Failed. 16 errors, 0 warnings. (took 120ms)

